/*!
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * \copyright   Copyright 2021 RSP Systems A/S. All rights reserved.
 * \license     Mozilla Public License 2.0
 * \author      Simon Glashoff
 * \author      Steffen Brummer
 */
#ifndef RSP_CORE_LIB_GRAPHICS_RECT_H
#define RSP_CORE_LIB_GRAPHICS_RECT_H

#include <rsp/graphics/Point.h>
#include <rsp/utils/OptionalPtr.h>

namespace rsp::graphics
{

class Canvas;
class Framebuffer;

/**
 * Rect class
 *
 * A Rect is made from a 2D coordinate (LeftTop) and a width and a height.
 * The RightBottom coordinate is just outside the rectangular area.
 * E.g. {0,0} to {1,1} = Rect with size and height of 1, covering 1x1 units. Highest included point is {0,0}
 * {0,0} to {10,10} = Rect with size and height of 10, covering 10x10 units. Highest included point is {9,9}
 */
class Rect
{
  public:
    Rect() = default;

    /**
     * \brief Constructs a Rect from coordinate and size.
     *
     * \param aLeft
     * \param aTop
     * \param aWidth
     * \param aHeight
     */
    Rect(GuiUnit_t aLeft, GuiUnit_t aTop, GuiUnit_t aWidth, GuiUnit_t aHeight);

    /**
     * \brief Construct a Rect from two points.
     *
     * \param aLeftTop
     * \param aRightBottom
     */
    Rect(const Point &arLeftTop, const Point &arRightBottom);

    /**
     * \brief Construct a Rect from origin point and size.
     *
     * \param aLeftTop
     * \param aWidth
     * \param aHeight
     */
    Rect(const Point &arLeftTop, GuiUnit_t aWidth, GuiUnit_t aHeight);

    /**
     * \brief Copy constructor.
     *
     * \param aRect
     */
    Rect(const Rect &aOther) = default;

    /**
     * \brief Move constructor
     *
     * \param aOther
     */
    Rect(Rect &&aOther) = default;

    /**
     * \brief Assignment operator
     *
     * \param arRect
     * \return
     */
    Rect& operator=(const Rect &arRect) = default;

    /**
     * \brief Check if the rect covers no area
     * \return true if height or width is zero.
     */
    [[nodiscard]] bool empty() const;

    /**
     * \brief Equal to operator
     * \param arRect
     * \return True if equal
     */
    inline bool operator==(const Rect &arRect) const
    {
        return !(*this != arRect);
    }

    /**
     * \brief Not equal to operator
     * \param arRect
     * \return True if not equal
     */
    inline bool operator!=(const Rect &arOther) const
    {
        return (mLeftTop != arOther.mLeftTop) || (mWidth != arOther.mWidth) || (mHeight != arOther.mHeight);
    }

    /**
     * \brief Get the overlapping area of two rect's.
     * \param arRect
     * \return New Rect with overlapping area of the two
     */
    Rect operator&(const Rect &arOther) const;
    Rect& operator&=(const Rect &arOther);

    /**
     * \brief Get the bounding area of two rect's.
     * \param arRect
     * \return New Rect that contains the areas of the two
     */
    Rect operator|(const Rect &arOther) const;
    Rect& operator|=(const Rect &arOther);

    /**
     * \brief Get the top value
     *
     * \return int
     */
    [[nodiscard]] GuiUnit_t GetTop() const;
    /**
     * \brief Set the top value of the Rect.
     *
     * \param aTopValue
     */
    Rect& SetTop(GuiUnit_t aTopValue);

    /**
     * \brief Get the bottom value
     *
     * \return int
     */
    [[nodiscard]] GuiUnit_t GetBottom() const;
    /**
     * \brief Set the bottom value of the Rect.
     *
     * \param aBotValue
     */
    Rect& SetBottom(GuiUnit_t aBotValue);

    /**
     * \brief Get the left value
     *
     * \return int
     */
    [[nodiscard]] GuiUnit_t GetLeft() const;
    /**
     * \brief Set the left value of the Rect.
     *
     * \param aLeftValue
     */
    Rect& SetLeft(GuiUnit_t aLeftValue);

    /**
     * \brief Get the right value.
     *
     * \return int
     */
    [[nodiscard]] GuiUnit_t GetRight() const;
    /**
     * \brief Set the right value of the Rect.
     *
     * \param aRightValue
     */
    Rect& SetRight(GuiUnit_t aRightValue);

    /**
     * \brief Set TopLeft to given point, move BottomRight to keep size.
     * \param arPoint
     */
    Rect& MoveTo(const Point &arPoint);
    Rect& operator=(const Point &arPosition) { MoveTo(arPosition); return *this; }

    /**
     * \brief Move this rect by the given x/y offsets.
     * \param aX
     * \param aY
     * \return self
     */
    Rect& Move(int aX, int aY);

    /**
     * \brief Set the size of this rect
     * \param aWidth
     * \param aHeight
     * \return self
     */
    Rect& SetSize(GuiUnit_t aWidth, GuiUnit_t aHeight);
    /**
     * \brief Add given values to the size of this rect
     * \param aWidth
     * \param aHeight
     * \return self
     */
    Rect& AddSize(int aWidth, int aHeight);


    /**
     * \brief Get the top left coordinate.
     *
     * \return Point
     */
//    [[nodiscard]] Point& GetTopLeft()
//    {
//        return mLeftTop;
//    }
    [[nodiscard]] const Point& GetTopLeft() const
    {
        return mLeftTop;
    }

    /**
     * \brief Get the bottom right coordinate.
     *        The coordinate is just outside the rect area.
     *
     * \return Point
     */
    [[nodiscard]] Point GetBottomRight() const
    {
        return {GetRight(), GetBottom()};
    }

    /**
     * \brief Get the width of the Rect.
     *
     * \return GuiUnit_t
     */
    [[nodiscard]] GuiUnit_t GetWidth() const;
    /**
     * \brief Set the width of the Rect.
     *
     * \param aWidth
     */
    Rect& SetWidth(GuiUnit_t aWidth);

    /**
     * \brief Get the height of the Rect.
     *
     * \return GuiUnit_t
     */
    [[nodiscard]] GuiUnit_t GetHeight() const;

    /**
     * \brief Set the height of the Rect.
     *
     * \param aHeight
     */
    Rect& SetHeight(GuiUnit_t aHeight);

    /**
     * \brief Determines if a point is inside area covered by the Rect.
     *
     * \param aPoint
     * \return bool
     */
    [[nodiscard]] bool IsHit(GuiUnit_t aX, GuiUnit_t aY) const;
    [[nodiscard]] bool IsHit(const Point &arPoint) const { return IsHit(arPoint.mX, arPoint.mY); }

    /**
     * \brief Limits the dimensions of the rectangle by checking if height and width are above zero
     *
     * \throws AssertException
     */
    void LimitDimensions();

  protected:
    // Allow friends to access members for speed optimizations.
    friend Canvas;
    friend Framebuffer;

    Point mLeftTop = {0, 0};
    GuiUnit_t mWidth = 0;
    GuiUnit_t mHeight = 0;
};

typedef rsp::utils::OptionalPtr<const Rect> OptionalRect;

std::ostream &operator<<(std::ostream &aStream, const Rect &arRect);
std::string to_string(const Rect &arRect);

} // namespace rsp::graphics

#endif // RSP_CORE_LIB_GRAPHICS_RECT_H
